force-app/main/default/objects/TMG_Assessment__c/TMG_Assessment__c.object-meta.xml
<CustomObject>
    <label>TMG Assessment</label>
    <nameField>
        <displayFormat>TMG-{00000}</displayFormat>
        <label>TMG Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMG Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>