force-app/main/default/objects/TMG_Assessment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TMG Assessments</relationshipLabel>
    <relationshipName>TMG_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>