force-app/main/default/objects/TMG_Assessment__c/fields/Assessed_Executive__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessed Executive</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Assessments</relationshipLabel>
    <relationshipName>TMG_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>