force-app/main/default/objects/TMG_Assessment__c/fields/Business_Leadership_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Leadership_Number__c</fullName>
    <label>Business Leadership</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>