force-app/main/default/objects/TMG_Assessment__c/fields/CEO_Viability__c.field-meta.xml
<CustomField>
    <fullName>CEO_Viability__c</fullName>
    <label>CEO Viability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Viable Now</fullName>
            </value>
            <value>
                <fullName>Not Viable</fullName>
            </value>
            <value>
                <fullName>Viable</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Demonstrates Viability</fullName>
            </value>
            <value>
                <fullName>1-2 Years</fullName>
            </value>
            <value>
                <fullName>1-3 Years</fullName>
            </value>
            <value>
                <fullName>2-3 Years</fullName>
            </value>
            <value>
                <fullName>2-4 Years</fullName>
            </value>
            <value>
                <fullName>2+ Years</fullName>
            </value>
            <value>
                <fullName>2-4+ Years</fullName>
            </value>
            <value>
                <fullName>3+ Years</fullName>
            </value>
            <value>
                <fullName>3-4 Years</fullName>
            </value>
            <value>
                <fullName>3-5 Years</fullName>
            </value>
            <value>
                <fullName>4+ Years</fullName>
            </value>
            <value>
                <fullName>4-5 Years</fullName>
            </value>
            <value>
                <fullName>5+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>