force-app/main/default/objects/TMG_Assessment__c/fields/Change_Management__c.field-meta.xml
<CustomField>
    <fullName>Change_Management__c</fullName>
    <label>Change Management</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>