force-app/main/default/objects/TMG_Assessment__c/fields/Collaborates__c.field-meta.xml
<CustomField>
    <fullName>Collaborates__c</fullName>
    <label>Collaborates</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>