force-app/main/default/objects/TMG_Assessment__c/fields/Cultivates_Innovation__c.field-meta.xml
<CustomField>
    <fullName>Cultivates_Innovation__c</fullName>
    <label>Cultivates Innovation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>