force-app/main/default/objects/TMG_Assessment__c/fields/Customer_Focus__c.field-meta.xml
<CustomField>
    <fullName>Customer_Focus__c</fullName>
    <label>Customer Focus</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>