force-app/main/default/objects/TMG_Assessment__c/fields/Date_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Assessment__c</fullName>
    <description>Month/Year the debrief took place</description>
    <label>Date of Assessment</label>
    <required>true</required>
    <type>Date</type>
</CustomField>