force-app/main/default/objects/TMG_Assessment__c/fields/Drives_Results__c.field-meta.xml
<CustomField>
    <fullName>Drives_Results__c</fullName>
    <label>Drives Results</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>