force-app/main/default/objects/TMG_Assessment__c/fields/EVP_Viability__c.field-meta.xml
<CustomField>
    <fullName>EVP_Viability__c</fullName>
    <label>EVP Viability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Viable Now</fullName>
            </value>
            <value>
                <fullName>Not Viable</fullName>
            </value>
            <value>
                <fullName>2+4 + Years</fullName>
            </value>
            <value>
                <fullName>3+ Years</fullName>
            </value>
            <value>
                <fullName>2-3 Years</fullName>
            </value>
            <value>
                <fullName>1-3 Years</fullName>
            </value>
            <value>
                <fullName>4+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>