force-app/main/default/objects/TMG_Assessment__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <label>Execution</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>