force-app/main/default/objects/TMG_Assessment__c/fields/External_Benchmarking__c.field-meta.xml
<CustomField>
    <fullName>External_Benchmarking__c</fullName>
    <label>External Benchmarking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Near Top Of Short List</fullName>
            </value>
            <value>
                <fullName>On Short List</fullName>
            </value>
            <value>
                <fullName>On Long List</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Top of Short List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>