force-app/main/default/objects/TMG_Assessment__c/fields/Function_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Function_Business_Unit__c</fullName>
    <label>Function / Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>