force-app/main/default/objects/TMG_Assessment__c/fields/Future_Potential__c.field-meta.xml
<CustomField>
    <fullName>Future_Potential__c</fullName>
    <label>Future Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Level</fullName>
            </value>
            <value>
                <fullName>Further Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>