force-app/main/default/objects/TMG_Assessment__c/fields/Global_Perspective__c.field-meta.xml
<CustomField>
    <fullName>Global_Perspective__c</fullName>
    <label>Global Perspective</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>