force-app/main/default/objects/TMG_Assessment__c/fields/Key_Experiences__c.field-meta.xml
<CustomField>
    <fullName>Key_Experiences__c</fullName>
    <label>Key Experiences</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>