force-app/main/default/objects/TMG_Assessment__c/fields/Leadership_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Attributes__c</fullName>
    <label>Leadership Attributes</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>