force-app/main/default/objects/TMG_Assessment__c/fields/Leading_Team__c.field-meta.xml
<CustomField>
    <fullName>Leading_Team__c</fullName>
    <label>Leading Team</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>