force-app/main/default/objects/TMG_Assessment__c/fields/Learning_Agility__c.field-meta.xml
<CustomField>
    <fullName>Learning_Agility__c</fullName>
    <label>Learning Agility</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>