force-app/main/default/objects/TMG_Assessment__c/fields/Market_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Market_Calibration__c</fullName>
    <label>Market Calibration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceptional</fullName>
            </value>
            <value>
                <fullName>Exceeds Expectations</fullName>
            </value>
            <value>
                <fullName>Meets Expectations</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>