force-app/main/default/objects/TMG_Assessment__c/fields/Operational_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Operational_Leadership__c</fullName>
    <label>Operational Leadership</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>