force-app/main/default/objects/TMG_Assessment__c/fields/People_Leadership__c.field-meta.xml
<CustomField>
    <fullName>People_Leadership__c</fullName>
    <label>People Leadership</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>