force-app/main/default/objects/TMG_Assessment__c/fields/People_Management_Internal__c.field-meta.xml
<CustomField>
    <fullName>People_Management_Internal__c</fullName>
    <label>People Management (Internal)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>