force-app/main/default/objects/TMG_Assessment__c/fields/Personal_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Personal_Attributes__c</fullName>
    <label>Personal Attributes</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>