force-app/main/default/objects/TMG_Assessment__c/fields/Results_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Results_Orientation__c</fullName>
    <label>Results Orientation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>