force-app/main/default/objects/TMG_Assessment__c/fields/Retention_Risk__c.field-meta.xml
<CustomField>
    <fullName>Retention_Risk__c</fullName>
    <label>Retention Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>