force-app/main/default/objects/TMG_Assessment__c/fields/Shaping_the_Environment__c.field-meta.xml
<CustomField>
    <fullName>Shaping_the_Environment__c</fullName>
    <label>Shaping the Environment</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>