force-app/main/default/objects/TMG_Assessment__c/fields/Stakeholder_Management__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Management__c</fullName>
    <label>Stakeholder Management</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>