force-app/main/default/objects/TMG_Assessment__c/fields/Strategy_Vision__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Vision__c</fullName>
    <label>Strategy and Vision</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>