force-app/main/default/objects/TMG_Assessment__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <label>Values</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>