force-app/main/default/objects/TMG_Assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assessed_Executive__c</columns>
    <columns>Function_Business_Unit__c</columns>
    <columns>Gender__c</columns>
    <columns>Date_of_Assessment__c</columns>
    <columns>Profile__c</columns>
    <columns>External_Benchmarking__c</columns>
    <columns>Market_Calibration__c</columns>
    <columns>Retention_Risk__c</columns>
    <columns>Global_Perspective__c</columns>
    <columns>Key_Experiences__c</columns>
    <columns>Leadership_Attributes__c</columns>
    <columns>Leading_Self__c</columns>
    <columns>Leading_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>