force-app/main/default/objects/TMG_Assessment__c/listViews/All_Assessments.listView-meta.xml
<ListView>
    <fullName>All_Assessments</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assessed_Executive__c</columns>
    <columns>Date_of_Assessment__c</columns>
    <columns>Function_Business_Unit__c</columns>
    <columns>Operational_Leadership__c</columns>
    <columns>Gender__c</columns>
    <columns>External_Benchmarking__c</columns>
    <columns>Future_Potential__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assessments</label>
</ListView>